[package]
name = "pccc"
version = "0.2.0"
authors = ["Venkat Venkatesan <sivarama.venkatesan@gmail.com>"]
edition = "2021"
rust-version = "1.75"
description = "Parallel-concatenated convolutional code"
documentation = "https://docs.rs/pccc"
readme = "README.md"
repository = "https://github.com/venkat0791/pccc"
license = "MIT"
keywords = ["turbo", "encoder", "decoder", "interleaver", "LTE"]
categories = ["simulation", "science", "mathematics"]

[dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.22", features = ["cargo"] }
float_eq = { version = "1.0", features = ["derive"] }
itertools = "0.13"
rand = "0.8"
rand_distr = "0.4"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.4"

[profile.release]
debug = true
