[package]
name = "pccc"
version = "0.4.0"
authors = ["Venkat Venkatesan <sivarama.venkatesan@gmail.com>"]
edition = "2021"
rust-version = "1.75"
description = "Parallel-concatenated convolutional code"
documentation = "https://docs.rs/pccc"
readme = "README.md"
repository = "https://github.com/venkat0791/pccc"
license = "MIT"
keywords = ["turbo", "encoder", "decoder", "interleaver", "LTE"]
categories = ["simulation", "science", "mathematics"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["cargo"] }
float_eq = { version = "1.0.1", features = ["derive"] }
itertools = "0.14.0"
rand = "0.9.2"
rand_distr = "0.5.1"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"

[profile.release]
debug = true
